kubernetes/example-php-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-php-app
  labels:
    app: example-php-app
spec:
  selector:
    matchLabels:
      app: example-php-app
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: example-php-app
    spec:
      containers:
      - name: app
        image: gcr.io/$GOOGLE_PROJECT/example-app:$CONTAINER_TAG
        volumeMounts:
        - name: newrelic-php-ini
          mountPath: /usr/local/etc/php/conf.d/newrelic.ini
          subPath: newrelic.ini
        resources:
          requests:
            cpu: 50m
        securityContext:
          runAsUser: 33 # www-data user in official php container
          allowPrivilegeEscalation: false
        livenessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 1
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 1
          periodSeconds: 10
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        resources:
          requests:
            cpu: 50m
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 3
          timeoutSeconds: 1
          successThreshold: 2
          failureThreshold: 3
      - name: socat
        image: gcr.io/$GOOGLE_PROJECT/example-app:$CONTAINER_TAG
        command:
        - /bin/bash
        - -c
        - socat -d -d TCP-LISTEN:$(NEWRELIC_DAEMON_PORT),reuseaddr,fork,su=nobody TCP:$(NEWRELIC_DAEMON_HOST):$(NEWRELIC_DAEMON_SOCAT_PORT)
        resources:
          requests:
            cpu: 20m
        livenessProbe:
          tcpSocket:
            # Same as NEWRELIC_DAEMON_PORT
            port: 33142
          initialDelaySeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            # Same as NEWRELIC_DAEMON_PORT
            port: 33142
          initialDelaySeconds: 1
          periodSeconds: 3
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: newrelic-env-config
        configMap:
          name: newrelic-env-config
      - name: newrelic-php-ini
        configMap:
          name: newrelic-php-ini
---
apiVersion: v1
kind: Service
metadata:
  name: example-php-app
  labels:
    app: example-php-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: example-php-app
