kubernetes/ingress-gclb.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-glbc
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: example-php-app
          servicePort: 80
